# solar_company

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  README.md  isort.cfg  pyproject.toml  requirements.txt
solar_app/: hooks.py  modules.txt
solar_app/api/v1/tariff/: __init__.py  get_monthly_tariff.py
solar_app/config/: desktop.py  docs.py
solar_app/scripts/: calculate_tariff.py
solar_app/solar_app/doctype/calculation_entry/: calculation_entry.js  calculation_entry.json  calculation_entry.py  test_calculation_entry.py
solar_app/solar_app/doctype/customer/: customer.js  customer.json  customer.py  test_customer.py
